# altis-engine

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: docs.yml
.sqlx/: query-056c7e05d9ce2c33641b8f7607bc716af655b6f4f37e44f742aa29b5c962487e.json  query-1afd0d110b9cd758e6e00b2ba98f76f9280eb47ae046f97333211f7951958557.json  query-68cf47a7ba7f8e135f8e0b207cad8eedf2479b36af683fcd8f01157fc8add374.json  query-95773a2fba9a86772fe9d24f8d3fdad0f1264a8f5f7e1455060132681b2b013f.json  query-a291bea3c27f5ca07ed7996a80d7ff7f693f4d72532aac05d8ba9439bb6dfa53.json  query-a2c70eef39a25cc72f74c5bc89c98ace8cd4c48cfeafbe29e189262a205d6ef2.json  query-ecf44455e6bebf197d5bce06de2554a95bdc370adfb0589f15620ac24a66f2ca.json
altis-api/: Cargo.toml  check_output.txt
altis-api/src/: admin.rs  auth.rs  bookings.rs  error.rs  finance.rs  holds.rs  holds_tests.rs  lib.rs  main.rs  offers.rs  orders.rs  search.rs  state.rs  summary_handler.rs  webhooks.rs  worker.rs
altis-api/src/middleware/: auth.rs  mod.rs  resiliency.rs
altis-api/src/v1/: ndc.rs  oneorder.rs
altis-api/tests/: integration_test.rs
altis-catalog/: Cargo.toml
altis-catalog/src/: inventory.rs  lib.rs  pricing.rs  product.rs
altis-core/: Cargo.toml
altis-core/src/: events.rs  iata.rs  identity.rs  lib.rs  payment.rs  repository.rs  search.rs  supplier.rs
altis-domain/: Cargo.toml
altis-domain/src/: booking.rs  events.rs  hold.rs  lib.rs  search.rs
altis-infra/: Cargo.toml
altis-infra/src/: booking_repo.rs  database.rs  events.rs  flight_repo.rs  lib.rs  redis_repo.rs
altis-offer/: Cargo.toml  build.rs
altis-offer/src/: ai_ranker.rs  events.rs  expiry.rs  features.rs  generator.rs  lib.rs  models.rs  rules.rs
altis-order/: Cargo.toml
altis-order/src/: changes.rs  disruption.rs  finance.rs  fulfillment.rs  lib.rs  manager.rs  models.rs  orchestrator.rs  settlement.rs
altis-proto/: Cargo.toml
altis-proto/src/: lib.rs
altis-shared/: Cargo.toml
altis-shared/src/: lib.rs  pii.rs
altis-shared/src/models/: events.rs
altis-store/: Cargo.toml
altis-store/src/: app_config.rs  catalog_repo.rs  database.rs  events.rs  flight_repo.rs  lib.rs  offer_repo.rs  order_repo.rs  redis_repo.rs
config/: default.toml
deploy/charts/altis-airline/: Chart.yaml  values.yaml
deploy/charts/altis-airline/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
docs/: ADMIN_CMS.md  API.md  BUSINESS_RULES.md  CUSTOMER_JOURNEY.md  DEPLOYMENT.md  DEVELOPMENT.md  IATA_ALIGNMENT_ROADMAP.md  OFFER_CUSTOMIZATION.md  OFFER_ORDER.md  PRICING.md  ROADMAP.md  SEAT_HOLD.md  USAGE.md  index.md  package.json
docs/.vitepress/: config.js
docs/architecture/: AI_BRAIN_TECHNICAL.md  OVERVIEW.md  ai_integration.md  session_management.md
migrations/: 006_business_rules.sql  007_offers_orders.sql  20231027000005_create_business_rules.sql  20260213000001_business_rules.sql  20260213000002_offers_orders.sql  20260213000003_fulfillment_consumption.sql  20260213000004_add_margin_percentage.sql  20260213000005_order_financials.sql  20260213000006_interline_support.sql  20260213000007_one_id_support.sql  20260214000008_structured_travelers.sql  20260214000009_order_expiration.sql
migrations/archived/: 20240101000001_reference_tables.sql  20240101000002_transaction_tables.sql  20240101050000_add_booking_legs.sql  20240211000000_fix_flight_schema.sql
proto/: ranking.proto
