[package]
name = "altis-api"
version = "0.1.0"
edition = "2021"

[dependencies]
altis-domain = { path = "../altis-domain" }
altis-infra = { path = "../altis-infra" }
altis-proto = { path = "../altis-proto" }
tokio = { version = "1.0", features = ["full"] }
warp = "0.3" # Or axum, let's stick to user pref or standard
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"
futures-util = "0.3"
jsonwebtoken = "9.2"
