[package]
name = "altis-catalog"
version = "0.1.0"
edition = "2021"

[dependencies]
altis-shared = { path = "../altis-shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "2.0"
