[package]
name = "altis-infra"
version = "0.1.0"
edition = "2021"

[dependencies]
altis-domain = { path = "../altis-domain" }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }
redis = { version = "0.24", features = ["tokio-comp"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
async-trait = "0.1"
config = "0.13"
