[package]
name = "altis-offer"
version = "0.1.0"
edition = "2021"

[dependencies]
altis-catalog = { path = "../altis-catalog" }
altis-shared = { path = "../altis-shared" }
altis-store = { path = "../altis-store" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
rdkafka = { version = "0.39.0", features = ["cmake-build"] }
tonic = "0.12"
prost = "0.13"
rand = "0.8"

[build-dependencies]
tonic-build = "0.12"
